fdo#39111 - UI inconsistent concerning suppression of output for empty pages

Change-Id: I6017e77e46298b45c7584830178455fe29016209
Reviewed-on: https://gerrit.libreoffice.org/9907
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>